exposed on API agent GET methods
